Created version for 1920x1080

--- a/index.html
+++ b/index.html
@@ -1,142 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfólio - Matheus Vieira</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="https://kit.fontawesome.com/b3d2d68362.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet"> 
-</head>
-<body>
+    <link rel="stylesheet" href="./css/index.css" />
+    <script
+      src="https://kit.fontawesome.com/b3d2d68362.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
     <header>
-        <h1>Portfólio</h1>
-        <div class="btn-Menu"><i class="fas fa-bars"></i></div>
-        <nav class="menu">
-            <ul class="navLinks">
-                <li>About Me</li>
-                <li>Projetos</li>
-                <li>Tecnologias</li>
-                <li>
-                    <label for="darkMode">
-                        <input type="checkbox" id="darkMode">Dark Mode
-                    </label>
-                </li>
-            </ul>
-        </nav>
+      <h1>Portfólio</h1>
+      <div class="boxMode">
+      <label for="darkMode">
+        <input type="checkbox" id="darkMode" />
+        <span class="check">
+      </label>
+      <div class="btn-Menu"><i class="fas fa-bars"></i></div>
+      <nav class="menu">
+        <ul class="navLinks">
+          <li><a href="#about">Sobre Mim</a></li>
+          <li><a href="#projects">Projetos</a></li>
+          <li><a href="#tech">Conhecimentos</a></li>
+        </ul>
+      </nav>
+    </div>
     </header>
     <section class="apresentation">
-        <h2>Olá, meu nome é 
-            <br>
-                <span>Matheus Vieira.</span>
-            <br>
-            Desenvolvedor Front-end
-            <br>
-            Estudande de ADS
+      <div>
+        <h2>
+          Olá, meu nome é
+          <br />
+          <span>Matheus Vieira.</span>
+          <br />
+          Desenvolvedor Front-end
+          <br />
+          Estudande de ADS
         </h2>
-        <button class="myGit"> Meu GitHub <i class="fab fa-github"></i></button>
-
+        <a href="https://github.com/MatheusVieira97" target="_blank">
+          <button class="myGit">
+            Meu GitHub <i class="fab fa-github"></i>
+          </button>
+        </a>
+      </div>
+      <img src="./src/imgApp.png" alt="Image" />
     </section>
-    <section class="about">
+    <section class="about" id="about">
+      <img src="./src/imgAbout.png" alt="Imagem" />
+      <div>
         <h3>Sobre Mim</h3>
         <p>
-            Meu nome é Matheus Vieira, tenho 23 anos, moro em Sorocaba, São Paulo.
-            Sou estudante de Análise e Desenvolvimento de Sistemas, pela Fatec Sorocaba,
-            atualmente no 4º Semestre.
+          Meu nome é Matheus Vieira, tenho 23 anos, moro em Sorocaba, São Paulo.
+          Sou estudante de Análise e Desenvolvimento de Sistemas, pela Fatec
+          Sorocaba, atualmente no 4º Semestre.
         </p>
         <p>
-            Iniciei com desenvolvimento Front End a alguns meses apenas, quando realizei o curso
-            da Heroway sobre o assunto e desde então tenho me aprofundado cada vez mais.
+          Iniciei com desenvolvimento Front End a alguns meses apenas, quando
+          realizei o curso da Heroway sobre o assunto e desde então tenho me
+          aprofundado cada vez mais.
         </p>
         <p>
-            Como base de estudo estou seguindo o RoadMap disponivel no GitHub 
-            <a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">(Aqui)</a>.
-            Sei que é um longo caminho, mas acredito que consigo chegar lá com dedicação e paciência.
+          Como base de estudo estou seguindo o RoadMap disponivel no GitHub
+          <a
+            href="https://github.com/kamranahmedse/developer-roadmap"
+            target="_blank"
+            >(Aqui)</a
+          >. Sei que é um longo caminho, mas acredito que consigo chegar lá com
+          dedicação e paciência.
         </p>
-        <button class="myLinkedIn">Meu LinkedIn <i class="fab fa-linkedin"></i></button>
+        <a href="https://www.linkedin.com/in/matheus97/" target="_blank">
+          <button class="myLinkedIn">
+            Meu LinkedIn <i class="fab fa-linkedin"></i>
+          </button>
+        </a>
+      </div>
     </section>
-    <section class="projects">
-        <h4>Projetos</h4>
+    <section class="projects" id="projects">
+      <h4>Projetos</h4>
+      <div>
         <div class="container">
-            <tittle>Front-end Mentor</tittle>
-            <p>Resolução dos desafios.</p>
-            <button class="btn-Visitar">Visitar <i class="fab fa-github"></i></button>
+          <tittle>Front-end Mentor</tittle>
+          <p>Resolução dos desafios.</p>
+          <a
+            href="https://github.com/MatheusVieira97/Intro-sign-up-form"
+            target="_blank"
+          >
+            <button class="btn-Visitar" href="" target="_blank">
+              Visitar <i class="fab fa-github"></i>
+            </button>
+          </a>
         </div>
         <div class="container">
-            <tittle>Facebook Clone</tittle>
-            <p>Feito com React.js e Redux</p>
-            <button class="btn-Visitar">Visitar <i class="fab fa-github"></i></button>
+          <tittle>Facebook Clone</tittle>
+          <p>Feito com React.js e Redux</p>
+          <a
+            href="https://github.com/MatheusVieira97/heroway-facebook-hands-on"
+            target="_blank"
+          >
+            <button class="btn-Visitar">
+              Visitar <i class="fab fa-github"></i>
+            </button>
+          </a>
         </div>
         <div class="container">
-            <tittle>Em Breve</tittle>
-            <p>Projeto em Construção</p>
+          <tittle>Em Breve</tittle>
+          <p>Projeto em Construção</p>
         </div>
         <div class="container">
-            <tittle>Em Breve</tittle>
-            <p>Projeto em Construção</p>
+          <tittle>Em Breve</tittle>
+          <p>Projeto em Construção</p>
         </div>
-
+        <div class="container">
+          <tittle>Em Breve</tittle>
+          <p>Projeto em Construção</p>
+        </div>
+        <div class="container">
+          <tittle>Em Breve</tittle>
+          <p>Projeto em Construção</p>
+        </div>
+      </div>
     </section>
-    <section class="tech">
-        <h5>Conhecimentos</h5>
+    <section class="tech" id="tech">
+      <h5>Conhecimentos</h5>
+      <div>
         <div class="container">
-            <i class="fab fa-html5"></i>
-            <tittle>HTML5</tittle>
+          <i class="fab fa-html5"></i>
+          <tittle>HTML5</tittle>
         </div>
         <div class="container">
-            <i class="fab fa-css3-alt"></i>
-            <tittle>CSS</tittle>
+          <i class="fab fa-css3-alt"></i>
+          <tittle>CSS</tittle>
         </div>
         <div class="container">
-            <i class="fab fa-js-square"></i>
-            <tittle>Javascript</tittle>
+          <i class="fab fa-js-square"></i>
+          <tittle>Javascript</tittle>
         </div>
         <div class="container">
-            <i class="fab fa-react"></i>
-            <tittle>React.Js</tittle>
+          <i class="fab fa-react"></i>
+          <tittle>React.Js</tittle>
         </div>
         <div class="container">
-            <i class="fas fa-database"></i>
-            <tittle>Oracle SQL</tittle>
+          <i class="fas fa-database"></i>
+          <tittle>Oracle SQL</tittle>
         </div>
         <div class="container">
-            <i class="fas fa-code-branch"></i> 
-            <tittle>Git</tittle>
+          <i class="fas fa-code-branch"></i>
+          <tittle>Git</tittle>
         </div>
+      </div>
     </section>
 
     <footer>
-        <div class="contact">
-            <div>
-                <i class="fas fa-map-marked-alt"></i>
-                <b>Address</b>
-                <p>Sorocaba, São Paulo</p>
-            </div>
-            <div>
-                <i class="fas fa-envelope"></i>
-                <b>Email</b>
-                <p>email@domain.com</p>
-            </div>
-            <div>
-                <i class="fas fa-mobile-alt"></i>
-                <b>Phone</b>
-                <p>+55 (11) 9 xxxx-xxxx</p>
-            </div>
+      <div class="contact">
+        <div>
+          <i class="fas fa-map-marked-alt"></i>
+          <b>Address</b>
+          <p>Sorocaba, São Paulo</p>
         </div>
-        <div class="socialMedia">
-            <a>
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a>
-                <i class="fab fa-github"></i>
-            </a>
-            <a>
-                <i class="fab fa-free-code-camp"></i>
-            </a>
+        <div>
+          <i class="fas fa-envelope"></i>
+          <b>Email</b>
+          <p>matheus.msv1997@gmail.com</p>
         </div>
+        <div>
+          <i class="fas fa-mobile-alt"></i>
+          <b>Phone</b>
+          <p>+55 (15) 9 9656-6345</p>
+        </div>
+      </div>
+      <div class="socialMedia">
+        <a href="https://www.linkedin.com/in/matheus97/" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/MatheusVieira97" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.freecodecamp.org/mattvieira" target="_blank">
+          <i class="fab fa-free-code-camp"></i>
+        </a>
+      </div>
     </footer>
-
-
     <script src="./scripts/index.js"></script>
-</body>
+  </body>
 </html>
