Fixed email container

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a
             href="https://github.com/kamranahmedse/developer-roadmap"
             target="_blank"
-            >(Aqui)</a
+            >(<b>Aqui</b>)</a
           >. Sei que é um longo caminho, mas acredito que consigo chegar lá com
           dedicação e paciência.
         </p>
